# conduit-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  STRUCTURE.md
docs/: API.md  CONCEPTS.md  CONTRIBUTING.md  QUICKSTART.md  TRANSPORTS.md
elixir/: .gitignore  README.md  mix.exs
elixir/lib/: datagrout_conduit.ex
elixir/lib/datagrout_conduit/: client.ex  error.ex  guided_session.ex  identity.ex  oauth.ex  registration.ex  types.ex
elixir/lib/datagrout_conduit/transport/: behaviour.ex  jsonrpc.ex  mcp.ex
elixir/test/: bootstrap_test.exs  client_test.exs  datagrout_conduit_test.exs  guided_session_test.exs  identity_test.exs  oauth_test.exs  registration_test.exs  test_helper.exs
examples/python/: mcp_transport_example.py
python/: README.md  pyproject.toml
python/examples/: basic_usage.py  batch_operations.py  cost_tracking.py  discovery_demo.py  guided_workflow.py  type_transformation.py  workflow_orchestration.py
python/src/datagrout/: __init__.py
python/src/datagrout/conduit/: __init__.py  client.py  errors.py  identity.py  oauth.py  registration.py  types.py
python/src/datagrout/conduit/transports/: __init__.py  base.py  jsonrpc_transport.py  mcp_transport.py
python/tests/: test_client.py  test_identity.py  test_oauth.py
ruby/: .gitignore  README.md  datagrout-conduit.gemspec
ruby/lib/: datagrout_conduit.rb
ruby/lib/datagrout_conduit/: client.rb  errors.rb  identity.rb  oauth.rb  registration.rb  types.rb  version.rb
ruby/lib/datagrout_conduit/transport/: base.rb  jsonrpc.rb  mcp.rb
ruby/test/: client_test.rb  datagrout_conduit_test.rb  identity_test.rb  oauth_test.rb  registration_test.rb  test_helper.rb
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/examples/: basic.rs  batch_operations.rs  cost_tracking.rs  discovery.rs  flow_orchestration.rs  guided_workflow.rs  type_transformation.rs
rust/src/: client.rs  error.rs  identity.rs  lib.rs  oauth.rs  protocol.rs  registration.rs  transport.rs  types.rs
rust/tests/: client_tests.rs  identity_tests.rs  integration_tests.rs  registration_tests.rs  transport_tests.rs
typescript/: README.md  package.json  tsconfig.json
typescript/examples/: basicUsage.ts  batchOperations.ts  costTracking.ts  discoveryDemo.ts  guidedWorkflow.ts  typeTransformation.ts  workflowOrchestration.ts
typescript/src/: client.ts  errors.ts  identity.ts  index.ts  oauth.ts  registration.ts  types.ts
typescript/src/transports/: base.ts  jsonrpc.ts  mcp.ts
typescript/tests/: client.test.ts  identity.test.ts  integration.test.ts  oauth.test.ts
